Added retries, docker-compose, get+set state